deploy/k8s/manifest.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: seafile-db
  namespace: tools
  labels:
    app: seafile
    component: db
    instance: prd
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: seafile
      component: db
      instance: prd
  serviceName: seafile-db
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: seafile
        component: db
        instance: prd
    spec:
      serviceAccountName: seafile-db
      securityContext:
        fsGroup: 2000
      containers:
        - name: mariadb
          image: "harbor.k8s.lan/dockerhub-proxy/bitnami/mariadb:10.6.8-debian-11-r9"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          ports:
            - containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
            - name: config
              mountPath: /opt/bitnami/mariadb/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: seafile-db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        selector:
          matchLabels:
            app: seafile
            component: db
            instance: prd
        accessModes:
          - "ReadWriteOnce"
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: "8Gi"

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: seafile-memcached
  namespace: tools
  labels:
    app: seafile
    component: memcached
    instance: prd
spec:
  selector:
    matchLabels:
      app: seafile
      component: memcached
      instance: prd
  replicas: 1
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: seafile
        component: memcached
        instance: prd
    spec:
      securityContext:
        fsGroup: 2000
      serviceAccountName: default
      containers:
        - name: memcached
          image: "harbor.k8s.lan/dockerhub-proxy/bitnami/memcached:1.6.19-debian-11-r0"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          ports:
            - containerPort: 11211
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: 11211
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
            tcpSocket:
              port: 11211
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: seafile-server
  namespace: tools
  labels:
    app: seafile
    component: server
    instance: prd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seafile
      component: server
      instance: prd
  template:
    metadata:
      labels:
        app: seafile
        component: server
        instance: prd
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: seafile-server
          image: "harbor.k8s.lan/k8s/seafile:7"
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          resources: {}
          volumeMounts:
            - name: data
              mountPath: /shared
            - name: nginx-conf
              mountPath: /shared/nginx/conf/seafile.nginx.conf
              subPath: seafile.nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: seafile-nginx-conf
        - name: data
          persistentVolumeClaim:
            claimName: pvc-iscsi-seafile-data
      imagePullSecrets:
        - name: harbor-registry-creds

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: seafile-document-server
  namespace: tools
  labels:
    app: seafile
    component: document-server
    instance: prd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seafile
      component: document-server
      instance: prd
  template:
    metadata:
      labels:
        app: seafile
        component: document-server
        instance: prd
    spec:
      serviceAccountName: default
      containers:
        - name: seafile-document-server
          image: "harbor.k8s.lan/dockerhub-proxy/onlyoffice/documentserver:latest"
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 180
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 180
          resources: {}
          volumeMounts:
            - name: seafile-documentserver
              mountPath: /etc/onlyoffice/documentserver/local-production-linux.json
              subPath: local-production-linux.json
      volumes:
        - name: seafile-documentserver
          configMap:
            name: seafile-documentserver-local-production-linux

---
kind: Service
apiVersion: v1
metadata:
  name: seafile-db
  namespace: tools
  labels:
    app: seafile
    component: db
    instance: prd
spec:
  selector:
    app: seafile
    component: db
    instance: prd
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306

---
kind: Service
apiVersion: v1
metadata:
  name: seafile-memcached
  namespace: tools
  labels:
    app: seafile
    component: memcached
    instance: prd
spec:
  selector:
    app: seafile
    component: memcached
    instance: prd
  type: ClusterIP
  ports:
    - name: memcache
      port: 11211
      targetPort: 11211

---
kind: Service
apiVersion: v1
metadata:
  name: seafile
  namespace: tools
  labels:
    app: seafile
    component: server
    instance: prd
spec:
  selector:
    app: seafile
    component: server
    instance: prd
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: seafile-document-server
  namespace: tools
  labels:
    app: seafile
    component: document-server
    instance: prd
spec:
  selector:
    app: seafile
    component: document-server
    instance: prd
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: seafile-private
  namespace: tools
  labels:
    app: seafile
    component: server
    instance: prd
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10240m"
spec:
  ingressClassName: nginx-private
  rules:
    - host: files.k8s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
  tls:
    - hosts:
        - files.k8s.lan
      secretName: tls-wildcard-k8s-lan

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: seafile-public
  namespace: tools
  labels:
    app: seafile
    component: server
    instance: prd
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-public
  rules:
    - host: cloud.theautomation.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seafile
                port:
                  number: 80
  tls:
    - hosts:
        - cloud.theautomation.nl
      secretName: tls-wildcard-theautomation-nl
